# streamlit-activities-menu

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: api.md  index.md
src/streamlit_activities_menu/: __init__.py  requirements.txt  version.py
src/streamlit_activities_menu/example_app/: app_activities.yaml  streamlit_app.py
src/streamlit_activities_menu/example_app/activities/: data_processing.py  main.py  map.py
