[tool.poetry]
name = "streamlit-activities-menu"
version = "0.1.3"
description = ""
authors = ["Jobelund <124563223+jobelund@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "streamlit_activities_menu", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
mkdocs = "^1.5.3"
pytest = "^7.4.3"
pyyaml = "^6.0.1"
streamlit = "^1.18"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
